--- a/notebooks/fetch_data.ipynb
+++ b/notebooks/fetch_data.ipynb
@@ -395,36 +395,60 @@
    "id": "d660e7b920928f27"
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "The firm marketing PDFs are stored on certify.gov and cannot be downloaded directly as PDFs. However, the underlying source code for the PDFs lives on the source HTML on the page where they are stored, written in base 64 as a big XML string. Therefore, an efficient way to pull the PDFs is to fetch the raw underlying base 64 string, convert it to binary, and then write the binary to PDF locally. The functions to carry this out are in the `fetch_marketing_pdfs` submodule.\n",
+    "\n",
+    "First, read in the list of UEIs from the entity registration data."
+   ],
+   "id": "65f085cd96d98a27"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-31T20:18:30.676799Z",
-     "start_time": "2024-12-31T20:18:30.618071Z"
+     "end_time": "2024-12-31T21:04:57.309368Z",
+     "start_time": "2024-12-31T21:04:56.519509Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
     "from scripts.config import RAW_DATA_DIR\n",
+    "\n",
+    "# Read in entity registration data and grab the UEI column\n",
     "df = pd.read_csv(f'{RAW_DATA_DIR}/raw_uei_data/EntityRegistration-20241215-014119.csv', usecols= [\"Unique Entity ID\"])\n",
+    "# Rename for short\n",
     "df.columns = [\"uei\"]\n",
-    "download_dir = f\"{RAW_DATA_DIR}/raw_pdfs\"\n",
     "# List of UEIs to query\n",
     "ueis = df['uei'].tolist()"
    ],
    "id": "d0910272ef6365dd",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "This function is a wrapper for a bunch of modular functions that grab the underlying\n",
+    "source code for the PDFs from the website, then download it to the raw data subdirectory. Download the PDFs:\n"
+   ],
+   "id": "d752eeacbe7cc092"
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2024-12-31T20:19:21.023758Z",
-     "start_time": "2024-12-31T20:19:14.025963Z"
+     "start_time": "2024-12-31T21:04:58.626532Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from scripts.data_fetchers.fetch_marketing_pdfs import fetch_capability_statement_pdfs\n",
+    "\n",
     "fetch_capability_statement_pdfs(ueis)"
    ],
    "id": "69536d9b869991f5",
@@ -433,70 +457,206 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetching data from https://certify.sba.gov/capabilities/E2N5TXXYYYP7...\n",
+      "Fetching data from https://certify.sba.gov/capabilities/HWWNS96N8GJ5...\n",
+      "No Capability Statement uploaded for UEI HWWNS96N8GJ5\n",
+      "Fetching data from https://certify.sba.gov/capabilities/XBADFDKCRAV5...\n",
+      "No Capability Statement uploaded for UEI XBADFDKCRAV5\n",
+      "Fetching data from https://certify.sba.gov/capabilities/M1YFJKPWCKG7...\n",
+      "No Capability Statement uploaded for UEI M1YFJKPWCKG7\n",
+      "Fetching data from https://certify.sba.gov/capabilities/Q7MHYRJYBL37...\n",
+      "No Capability Statement uploaded for UEI Q7MHYRJYBL37\n",
+      "Fetching data from https://certify.sba.gov/capabilities/N196QBAB9PZ5...\n",
+      "No Capability Statement uploaded for UEI N196QBAB9PZ5\n",
+      "Fetching data from https://certify.sba.gov/capabilities/H9SKLW2VK1B5...\n",
+      "No Capability Statement uploaded for UEI H9SKLW2VK1B5\n",
+      "Fetching data from https://certify.sba.gov/capabilities/HVYFKE5ENKA3...\n",
       "Success!\n",
-      "Extracting binary data for UEI E2N5TXXYYYP7\n",
+      "Extracting binary data for UEI HVYFKE5ENKA3\n",
       "Success!\n",
-      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/E2N5TXXYYYP7.pdf\n",
-      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/E2N5TXXYYYP7.pdf\n",
-      "Fetching data from https://certify.sba.gov/capabilities/HHANSGF1ELX3...\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/HVYFKE5ENKA3.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/HVYFKE5ENKA3.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/YYHUS62QE615...\n",
       "Success!\n",
-      "Extracting binary data for UEI HHANSGF1ELX3\n",
+      "Extracting binary data for UEI YYHUS62QE615\n",
       "Success!\n",
-      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/HHANSGF1ELX3.pdf\n",
-      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/HHANSGF1ELX3.pdf\n",
-      "Fetching data from https://certify.sba.gov/capabilities/JRRRE11LEM21...\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/YYHUS62QE615.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/YYHUS62QE615.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/ZRGAPFC8AJT9...\n",
+      "No Capability Statement uploaded for UEI ZRGAPFC8AJT9\n",
+      "Fetching data from https://certify.sba.gov/capabilities/LNYVZMG4CTR1...\n",
+      "No Capability Statement uploaded for UEI LNYVZMG4CTR1\n",
+      "Fetching data from https://certify.sba.gov/capabilities/RZEHZD9JLKL6...\n",
+      "No Capability Statement uploaded for UEI RZEHZD9JLKL6\n",
+      "Fetching data from https://certify.sba.gov/capabilities/XE6NFMZGQJR6...\n",
       "Success!\n",
-      "Extracting binary data for UEI JRRRE11LEM21\n",
+      "Extracting binary data for UEI XE6NFMZGQJR6\n",
       "Success!\n",
-      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/JRRRE11LEM21.pdf\n",
-      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/JRRRE11LEM21.pdf\n",
-      "Fetching data from https://certify.sba.gov/capabilities/EHM2NWLJHSJ7...\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/XE6NFMZGQJR6.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/XE6NFMZGQJR6.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/RK3BQM5PLRY3...\n",
       "Success!\n",
-      "Extracting binary data for UEI EHM2NWLJHSJ7\n",
+      "Extracting binary data for UEI RK3BQM5PLRY3\n",
       "Success!\n",
-      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/EHM2NWLJHSJ7.pdf\n",
-      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/EHM2NWLJHSJ7.pdf\n",
-      "Fetching data from https://certify.sba.gov/capabilities/EGKHPDKJ2411...\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/RK3BQM5PLRY3.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/RK3BQM5PLRY3.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/RLECLCT8XPN8...\n",
       "Success!\n",
-      "Extracting binary data for UEI EGKHPDKJ2411\n",
+      "Extracting binary data for UEI RLECLCT8XPN8\n",
       "Success!\n",
-      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/EGKHPDKJ2411.pdf\n",
-      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/EGKHPDKJ2411.pdf\n",
-      "Fetching data from https://certify.sba.gov/capabilities/GPV8EN61NBN6...\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/RLECLCT8XPN8.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/RLECLCT8XPN8.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/LNBJBQJCTFK9...\n",
+      "No Capability Statement uploaded for UEI LNBJBQJCTFK9\n",
+      "Fetching data from https://certify.sba.gov/capabilities/J8LZL2VCKNB9...\n",
       "Success!\n",
-      "Extracting binary data for UEI GPV8EN61NBN6\n",
+      "Extracting binary data for UEI J8LZL2VCKNB9\n",
       "Success!\n",
-      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/GPV8EN61NBN6.pdf\n",
-      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/GPV8EN61NBN6.pdf\n",
-      "Fetching data from https://certify.sba.gov/capabilities/EUJSKQHMPLR5...\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/J8LZL2VCKNB9.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/J8LZL2VCKNB9.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/FLBGC6P98HJ7...\n",
       "Success!\n",
-      "Extracting binary data for UEI EUJSKQHMPLR5\n",
+      "Extracting binary data for UEI FLBGC6P98HJ7\n",
       "Success!\n",
-      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/EUJSKQHMPLR5.pdf\n",
-      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/EUJSKQHMPLR5.pdf\n",
-      "Fetching data from https://certify.sba.gov/capabilities/HMCJNVLLBJ43...\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/FLBGC6P98HJ7.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/FLBGC6P98HJ7.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/VSEGJBTKMPN1...\n",
+      "No Capability Statement uploaded for UEI VSEGJBTKMPN1\n",
+      "Fetching data from https://certify.sba.gov/capabilities/TG5CD27YTLT4...\n",
+      "No Capability Statement uploaded for UEI TG5CD27YTLT4\n",
+      "Fetching data from https://certify.sba.gov/capabilities/CUJQTSKEAWZ9...\n",
       "Success!\n",
-      "Extracting binary data for UEI HMCJNVLLBJ43\n",
+      "Extracting binary data for UEI CUJQTSKEAWZ9\n",
       "Success!\n",
-      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/HMCJNVLLBJ43.pdf\n",
-      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/HMCJNVLLBJ43.pdf\n",
-      "Fetching data from https://certify.sba.gov/capabilities/F8HJH75CYKW1...\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/CUJQTSKEAWZ9.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/CUJQTSKEAWZ9.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/J6D5WQ5WHHK5...\n",
       "Success!\n",
-      "Extracting binary data for UEI F8HJH75CYKW1\n",
+      "Extracting binary data for UEI J6D5WQ5WHHK5\n",
       "Success!\n",
-      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/F8HJH75CYKW1.pdf\n",
-      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/F8HJH75CYKW1.pdf\n",
-      "Fetching data from https://certify.sba.gov/capabilities/FFQVMZUN2AU4...\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/J6D5WQ5WHHK5.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/J6D5WQ5WHHK5.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/T2QKZ3Z8SAC3...\n",
+      "No Capability Statement uploaded for UEI T2QKZ3Z8SAC3\n",
+      "Fetching data from https://certify.sba.gov/capabilities/ECKBPE48GKY7...\n",
       "Success!\n",
-      "Extracting binary data for UEI FFQVMZUN2AU4\n",
+      "Extracting binary data for UEI ECKBPE48GKY7\n",
       "Success!\n",
-      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/FFQVMZUN2AU4.pdf\n",
-      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/FFQVMZUN2AU4.pdf\n"
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/ECKBPE48GKY7.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/ECKBPE48GKY7.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/YE6BSCJ18Q34...\n",
+      "Success!\n",
+      "Extracting binary data for UEI YE6BSCJ18Q34\n",
+      "Success!\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/YE6BSCJ18Q34.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/YE6BSCJ18Q34.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/NTU8CNMG7ZM1...\n",
+      "Success!\n",
+      "Extracting binary data for UEI NTU8CNMG7ZM1\n",
+      "Success!\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/NTU8CNMG7ZM1.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/NTU8CNMG7ZM1.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/J1LRXJ6MVKE7...\n",
+      "Success!\n",
+      "Extracting binary data for UEI J1LRXJ6MVKE7\n",
+      "Success!\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/J1LRXJ6MVKE7.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/J1LRXJ6MVKE7.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/KKRWHF7LA8B1...\n",
+      "Success!\n",
+      "Extracting binary data for UEI KKRWHF7LA8B1\n",
+      "Success!\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/KKRWHF7LA8B1.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/KKRWHF7LA8B1.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/SYAWGSENTLC9...\n",
+      "Success!\n",
+      "Extracting binary data for UEI SYAWGSENTLC9\n",
+      "Success!\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/SYAWGSENTLC9.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/SYAWGSENTLC9.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/PR3BCFPRNHG2...\n",
+      "Success!\n",
+      "Extracting binary data for UEI PR3BCFPRNHG2\n",
+      "Success!\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/PR3BCFPRNHG2.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/PR3BCFPRNHG2.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/EMNDBXF7JSK9...\n",
+      "Success!\n",
+      "Extracting binary data for UEI EMNDBXF7JSK9\n",
+      "Success!\n",
+      "Creating PDF at /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/EMNDBXF7JSK9.pdf\n",
+      "PDF successfully saved: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success/data/raw/raw_pdfs/EMNDBXF7JSK9.pdf\n",
+      "Fetching data from https://certify.sba.gov/capabilities/YZFRW2T2HJV5...\n",
+      "No Capability Statement uploaded for UEI YZFRW2T2HJV5\n",
+      "Fetching data from https://certify.sba.gov/capabilities/LNXEYDDFYQ66...\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-31T21:04:35.368242Z",
+     "start_time": "2024-12-31T21:04:33.780345Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "from scripts.data_fetchers.fetch_marketing_pdfs import fetch_raw_pdf_data, fetch_capability_statement_pdfs\n",
+    "print(fetch_raw_pdf_data(\"HWWNS96N8GJ5\"))\n",
+    "\n",
+    "fetch_capability_statement_pdfs((\"HWWNS96N8GJ5\",\"HWWNS96N8GJ5\"))\n"
+   ],
+   "id": "39fcf5cf58a7b0cc",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[32m2024-12-31 13:04:33.835\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mscripts.config\u001B[0m:\u001B[36m<module>\u001B[0m:\u001B[36m11\u001B[0m - \u001B[1mPROJ_ROOT path is: /Users/jaspercooper/Dropbox/01_Projects/01_python_projects/predict_marketing_success\u001B[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching data from https://certify.sba.gov/capabilities/HWWNS96N8GJ5...\n",
+      "{'pdf_data_base64': 'No Capability Statement uploaded for UEI HWWNS96N8GJ5', 'uei': 'HWWNS96N8GJ5'}\n",
+      "Fetching data from https://certify.sba.gov/capabilities/HWWNS96N8GJ5...\n",
+      "No Capability Statement uploaded for UEI HWWNS96N8GJ5\n",
+      "Fetching data from https://certify.sba.gov/capabilities/HWWNS96N8GJ5...\n",
+      "No Capability Statement uploaded for UEI HWWNS96N8GJ5\n"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-31T20:57:24.513492Z",
+     "start_time": "2024-12-31T20:57:24.195072Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import os\n",
+    "output_dir = f\"{RAW_DATA_DIR}/raw_pdfs/\"\n",
+    "\n"
+   ],
+   "id": "f62a6f8af140d529",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['L2PCLK4LACX3', 'JRRRE11LEM21', 'F8HJH75CYKW1', 'HMCJNVLLBJ43', 'EHM2NWLJHSJ7', 'EGKHPDKJ2411', 'EMB6F6ML48D9', 'HHANSGF1ELX3', 'CNK4HSQNE1M3', 'FFQVMZUN2AU4', 'ZB7NPX2HLFY5', 'FU6QJHHG7T22', 'C49RM1EY1UY5', 'WKX5XUQGH276', 'E2N5TXXYYYP7', 'EUJSKQHMPLR5', 'F9BRDNLB5J99', 'GPV8EN61NBN6', 'CKXXZL52PLZ2', 'GAE3BQFCPWM5', 'CLMDT32GT7F7', 'DQEWGZCLS7A7', 'CP5UGDR6ZNA4', 'H3FJC4XYEHM9', 'JMZMAE63TBR5', 'EAFRLAM81JK4']\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "metadata": {},
